test/integration/bad/bad_fundef_returntypes4.stan
functions{
  real foo(){
    if (1){
      return 1.0;
    }
  }
}
